[gd_scene load_steps=5 format=2]

[ext_resource path="res://Logo/logo.JPG" type="Texture" id=1]
[ext_resource path="res://buttons/StartGame.tscn" type="PackedScene" id=2]
[ext_resource path="res://buttons/RankButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://HomeScreen.gd" type="Script" id=5]

[node name="HomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 297.437
margin_top = 71.6407
margin_right = 297.437
margin_bottom = 71.6407
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 82.5175
margin_right = 1160.0
margin_bottom = 642.518
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 170.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Center" type="HBoxContainer" parent="Menu"]
margin_top = 174.0
margin_right = 100.0
margin_bottom = 278.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Options" type="VBoxContainer" parent="Menu/Center"]
margin_right = 100.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGame" parent="Menu/Center/Options" instance=ExtResource( 2 )]
margin_right = 100.0
margin_bottom = 50.0

[node name="RankButton" parent="Menu/Center/Options" instance=ExtResource( 3 )]
margin_top = 54.0
margin_right = 100.0
margin_bottom = 104.0

[node name="LoginInfo" type="HBoxContainer" parent="Menu"]
margin_top = 282.0
margin_right = 304.0
margin_bottom = 306.0
rect_min_size = Vector2( 300, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/LoginInfo"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LineEdit" type="LineEdit" parent="Menu/LoginInfo/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 24 )

[node name="Login" type="Button" parent="Menu/LoginInfo"]
margin_left = 204.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 20 )

[node name="Label" type="Label" parent="Menu/LoginInfo/Login"]
margin_right = 40.0
margin_bottom = 14.0
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyList" type="ItemList" parent="Menu/LoginInfo/Login"]
anchor_left = 1.357
anchor_top = -4.527
anchor_right = 1.357
anchor_bottom = -4.527
margin_left = 0.299988
margin_top = -0.35199
margin_right = 360.3
margin_bottom = 166.648
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notification" type="HBoxContainer" parent="Menu"]
margin_top = 310.0
margin_right = 100.0
margin_bottom = 334.0
rect_min_size = Vector2( 100, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="Menu/notification"]
margin_top = 5.0
margin_bottom = 19.0
[connection signal="pressed" from="Menu/LoginInfo/Login" to="." method="_on_Login_pressed"]
